# notebook

arithmetic/: minimax
arithmetic/minimax/: ac.py  kmp.py  minimax1.py  minimax2.py
docs/: ApiGolang.md  CNAME  README.md  _coverpage.md  _sidebar.md  asm.md  index.html  structure.md
docs/api/ai/: link.md
docs/api/asm/: asm.md
docs/api/golang/: bytes.md  io.md
docs/rapyorq/: common.go  constant.go  main.go  ss.md  symbol.go
docs/task/: input1.txt  input2.txt  input3.txt  input4.txt  main.go  minimax.py  queen.py  queen2.py  queen3.py  queen4.py  queen5.py  readme.md  task.py  task2.py  task3.py  task4.py  task6.py  task7.py  task8.py
rust/export/: Cargo.toml
rust/export/src/: ee.rs  lib.rs
rust/gui/: Cargo.toml
rust/gui/examples/: basic.rs
rust/import/: Cargo.toml  build.rs
rust/import/src/: main.rs
rust/import/src/io/: mod.rs
rust/import/vender/v8/: index.c
rust/lib/: Cargo.toml
rust/lib/src/: lib.rs
